fixed gap when width>450px

--- a/style.scss
+++ b/style.scss
@@ -116,6 +116,7 @@ output {
     display: grid;
     grid-auto-flow: column;
     grid-column-gap: 0.6rem;
+    grid-row-gap: 0.6rem;
 
     @media only screen and (width < 450px) {
         display: flex;
